# bible-desktop-qt

./: CMakeLists.txt
resources/: bible.qrc
src/: BibleDatabase.cpp  BibleDatabase.h  BibleWindow.cpp  BibleWindow.h  main.cpp
